# cross_my_heart_quilt_square_solver

./: .pre-commit-config.yaml  README.md  pyproject.toml
quilt_square_color_placer/: main.py  quilt.py  render_rich.py  render_svg.py
