[tool.poetry]
name = "quilt-square-color-placer"
version = "0.1.0"
description = ""
authors = ["Saul Reynolds-Haertle <saul@saulrh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.1"
click = "^8.1.7"
cpmpy = "^0.9.20"
svg-py = "^1.4.3"
mypy = "^1.10.0"
pytype = "^2024.4.11"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quilt_square_color_placer = "quilt_square_color_placer.main:main"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = "cpmpy"
ignore_missing_imports = "True"
